# Moment-calculator

./: .env.example  .gitignore  README.md  kesmeyontemi.md  package-lock.json  package.json
backend/: README.md  pyproject.toml  pytest.ini
backend/src/beam_solver_backend/: __init__.py  api.py  main.py  schemas.py  solvers.py
backend/src/beam_solver_backend/api/: routes.py
backend/src/beam_solver_backend/schemas/: beam.py  chimney.py
backend/src/beam_solver_backend/solver/: cantilever_solver.py  chimney.py  detailed_solver.py  static_solver.py
backend/tests/: test_api.py  test_cantilever.py  test_solver.py
docs/: 01_PRD.md  02_USER_STORIES.md  03_UX_UI_SPEC.md  04_BACKEND_API_SPEC.md  05_ALGORITHMS_FORMULAE.md  06_VALIDATION_RULES.md  07_TEST_PLAN.md  08_NFR_AND_ARCHITECTURE.md  09_ANALYTICS_TELEMETRY.md  10_ROADMAP.md  11_GLOSSARY.md  BEAM_SOLVER_ALGORITHM_DETAILS.md
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: AreaMethodDiagram.tsx  BeamDiagrams.tsx  BeamForm.tsx  BeamSectionDiagram.tsx  BeamSketch.tsx  DerivationSteps.tsx  DetailedSolutionPanel.tsx  DiagramTabs.tsx  ResultsPanel.tsx
src/types/: beam.ts  react-katex.d.ts
