[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-solver-backend"
version = "0.1.0"
description = "MVP backend for beam analysis solver"
authors = [{ name = "Bitirme Projesi Team" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "sympy>=1.12",
    "python-multipart>=0.0.9"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]